ctms-commons history
====================

1.0.6
-----

### lang

- Support constructor initialization in StaticNowFactory.

### suite-authorization

- Promote to released-module status (last pre-release was 0.5.0).  For earlier
  changes, see suite/authorization/CHANGELOG.prerelease.

1.0.5
-----

### core

- Add MoreRestrictions factory for Hibernate criteria.  First feature
  is a version of Hibernate's #in which automatically segments the
  value list for Oracle compatibility.

1.0.4
-----

### all

- Make all external imports optional in OSGi metadata.  This allows
  applications which use ctms-commons to pick-and-choose which
  features to use.

1.0.3
-----

### core

- Add tests for AuditUtil.
- Fix varargs problem in AuditUtil.getObjectId which caused it to
  never return an ID.

1.0.2
-----

### all

- Ensure that non-class resources are properly included in
  bnd-packaged jars.  This affected the web, laf, and
  suite:authorization modules.
- Allow suite:authorization integrated test database connection
  parameters to be specified using a properties file.

1.0.1
-----

### core

- Return build name as BuildInfo#toString.
- Treat OSGi-style .DEV revisions as snapshots in BuildInfo.

### all

- Updated ivy4r dependency to 0.11.0.
- Ensured that `buildr javadoc` can build combined javadoc for the
  whole project.
- Ensure that the project is built using Java 5's classfile format.

1.0.0
-----

### core

- Backwards-incompatible change:  introduce ConfigurationProperty and
  ConfigurationProperties interfaces.  The classes which had these names
  are now called DefaultConfigurationProperty and
  DefaultConfigurationProperties.
- Deprecated ...tools.spring.PropertyPlaceholderConfigurer.  The
  Spring 2.5+ version of this class provides equivalent functionality,
  so we don't need to maintain this fork any longer.  It will be
  removed in 1.1 or later.

### maven

- No projects use maven any longer, so all the maven mojos have been